# ferro

./: .editorconfig  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.tr.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  ftp-client-analiz-raporu.md  gelistirme-plani.md  index.html  package-lock.json  package.json  stackvo.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.component.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  quality.yml  release.yml
docs/: DEVELOPMENT.tr.md  RELEASING.md  tauri-migration.md
scripts/: generate-seed-sites.mjs
seed/: sites.seed.json
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  crypto.rs  error.rs  handlers.rs  lib.rs  localfs.rs  logger.rs  main.rs  menu.rs  paths.rs  settings.rs  state.rs  types.rs  updater.rs  vault.rs
src-tauri/src/store/: json_store.rs  mod.rs  sites.rs
src-tauri/src/sync/: config.rs  crypto.rs  engine.rs  mod.rs  providers.rs
src-tauri/src/team/: crypto.rs  engine.rs  mod.rs  store.rs
src-tauri/src/transfer/: client.rs  compare.rs  edit.rs  ftp.rs  mod.rs  proxy.rs  queue.rs  session.rs  sftp.rs  tofu.rs
src/components/: AboutDialog.vue  AppDrawer.vue  FilePane.vue  HostKeyDialog.vue  LocalePreview.vue  LogPanel.vue  PasswordDialog.vue  SyncDrawer.vue  TeamDialog.vue  TransferTabs.vue
src/lib/: format.ts  theme.ts
src/locales/: en.ts
src/main/: index.ts
src/plugins/: vuetify.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: errors.ts  index.ts  ipc.ts  sync.ts  team.ts  transfer.ts
src/stores/: local.ts  sites.ts
src/views/: MainView.vue
test/: COMPATIBILITY.md  docker-compose.yml  edit-manager.unit.test.ts  ftp-adapter.integration.test.ts  ipc-validation.unit.test.ts  json-store.unit.test.ts  pool.unit.test.ts  queue-retry.unit.test.ts  queue.integration.test.ts  remote-fs-reactivity.unit.test.ts  session.integration.test.ts  sftp-adapter.integration.test.ts  sftp-resume.integration.test.ts  sites.unit.test.ts  sync.unit.test.ts  team-crypto.unit.test.ts  throttle.unit.test.ts  transfer-type.unit.test.ts  vault-fallback.unit.test.ts  vault-master.unit.test.ts
test/component/: AppDrawer.spec.ts  (+7 more)
(+112 files in other folders)
